--- a/publications.html
+++ b/publications.html
@@ -66,8 +66,8 @@ document.write(document.lastModified);
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="skills.html">Skills</a></li>
-    <li><a href="Publications.html">Publications</a></li>
-    <li><a href="Code.html">Code</a></li>
+    <li><a href="publications.html">Publications</a></li>
+    <li><a href="code.html">Code</a></li>
 		<li><a href="fun.html">Fun</a></li>
   </ul>
   Research:
