--- a/skills.html
+++ b/skills.html
@@ -32,7 +32,7 @@
 		<li> Shipboard stratigraphy (utilising downcore L*, density, RGB data)</li>
 		<li> Prepping and deploying Gravity Cores, Piston Cores, Multi-Cores, CTDs</li>
 	</ul>
-	<li><img src="doc/skills4.jpg" height="160"> <img src="doc/skills5.jpg" height="160"> <img src="doc/skills6.jpg" height="160">
+	<li><img src="doc/skills4.JPG" height="160"> <img src="doc/skills5.jpg" height="160"> <img src="doc/skills6.jpg" height="160">
 	<li><u>Office:</u></li>
 	<ul style="list-style-type:disc; line-height:1.5">
 		<li> Chronostratigraphy: Constructing age-depth models for sediment cores by a variety of approaches, classical and novel</li>
@@ -66,8 +66,8 @@ document.write(document.lastModified);
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="skills.html">Skills</a></li>
-    <li><a href="Publications.html">Publications</a></li>
-    <li><a href="Code.html">Code</a></li>
+    <li><a href="publications.html">Publications</a></li>
+    <li><a href="code.html">Code</a></li>
 		<li><a href="fun.html">Fun</a></li>
   </ul>
   Research:
