added new tex code

--- a/code.html
+++ b/code.html
@@ -25,6 +25,9 @@
 		<li><a href="m code/redfitAS.m">redfitAS.m</a>:<small> A script <i>(function coming soon)</i> to replicate Schulz and Mudelsee's REDFIT algorithm. Lomb-Scargle Periodogram of irregularly-spaced time series with red noise error estimates and bias-correction based on <a href="https://www.sciencedirect.com/science/article/pii/S0098300401000449">Schulz and Mudelsee 2002</a></small></li>
 	</ul>
   <li><u>.tex</u></li>
+	<ul style="list-style-type:disc;">
+	<li><a href="m code/template.tex">template.tex</a>:<small> The template for my latex-compiled notes, in the tufte-class. This format (with a wide margin and numerous 'sidenotes') is inspired by Edward Tufte, a deity of information design. Modified from <a href="https://tufte-latex.github.io/tufte-latex/">Tufte-latex</a></small></li>
+</ul>
 	</ul>
 
 </p>
