--- a/skills.html
+++ b/skills.html
@@ -21,7 +21,7 @@
 	<ul style="list-style-type:disc; line-height:1.5">
 		<li> Sediment grain size analysis (Coulter Counter, Malvern MultiSizer X)</li>
 		<li> Identification and picking of Neogene Foraminifera (planktic and benthic)</li>
-		<li> Stable isotope analysis of calcite (MAT 253, Thermo Kiel V)</li>
+		<li> Stable isotope analysis of calcite (Thermo MAT 253 [Kiel IV])</li>
 		<li> Identification and counting of ice-rafted Debris, pyrite, and other sand-sized entities in marine sediment (light microscope and SEM) </li>
 	</ul>
 	<li><img src="doc/skills1.jpeg" height="140"> <img src="doc/skills3.jpeg" height="140"> <img src="doc/skills2.jpeg" height="140">
