--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@ document.write(document.lastModified);
     <li><a href="code.html">Code</a></li>
 		<li><a href="fun.html">Fun</a></li>
   </ul>
-  Research:
-  <ul class="b">
-    <li><a href="IRD.html">       IRD</a></li>
+	<br>
+  Notes:
+  <ul class="b" padding-left="3em">
+    <li><a href="Time Series Analysis">Time Series Analysis</a></li>
   </ul>
 </div>
 </nav>
