--- a/publications.html
+++ b/publications.html
@@ -19,8 +19,12 @@
 		<font color = #555>
 	<li><u>Papers:</u></li>
 	<ul style="list-style-type:disc; line-height:1.5">
-		<li><p><b>A Southern Hemisphere Lead of Glacial Deep-Water Geometry</b><br> <cite><u>Starr, A.</u>, Hall, I.R., et al.</cite>, (in prep)</p>
+		<li><p><b>A Southern Ocean Lead Over Deep Water-Mass Reorganizations during Pleistocene Glacials</b><br> <cite><u>A. Starr</u>, I.R. Hall, S. Barker, S.R. Hemming, H.J.L. van der Lubbe, M.A. Berke, G.R. Bigg, A. Cartagena, F.J. Jiménez-Espejo, J. Gruetzner, G. Knorr, N. Lathika, L.J. LeVay, R. Robinson, M. Ziegler, X. Zhang</cite>, (in review)</p>
 		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="file.m" target="_blank">code</a> <a href="cite.bib" target="_blank">.bib</a> <a href="temp" target="_blank">link</a></small></pre></li>
+
+		<li><p><b>Invigoration of Indian Ocean Zonal Circulation amplified the Pleistocene Aridification of Eastern Africa</b><br> <cite>H.J.L. van der Lubbe, I.R. Hall, S. Barker, S. R. Hemming, T.F. Baars, <u>A. Starr</u>, J. Just, and J.C.A. Joordens</cite>, (in revision)</p>
+		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="temp" target="_blank">link</a></small></pre></li>
+
 			</ul>
   <li><u>Selected Conference Presentations:</u></li>
 	<ul style="list-style-type:disc">
@@ -39,6 +43,11 @@
 		<li><p><b>Melting Ice and Sinking Seas: What Ice-Rafted Debris can tell us about Glacial Ocean Circulation</b><br> <cite><u>Starr, A.,</u> et al.</cite>, NERC Wessex Congress (2019),
 		<b><small>TALK</small></b></p>
 		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://github.com/AidanStarr/Wessex-Congress-Figures" target="_blank">code</a></small></pre></li>
+
+		<li><p><b>Icebergs at the Agulhas Plateau through the Pleistocene: Accumulation, Provenance, and Interpretation of Ice-Rafted Debris</b><br> <cite><u>Starr, A.,</u> et al.</cite>, AGU Fall Meeting (2019),
+		<b><small>POSTER</small></b></p>
+			<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://epic.awi.de/id/eprint/50737/" target="_blank">link</a></small></pre></li>
+
 		</ul>
 	<li><u>Other:</u></li>
 		<ul style="list-style-type:disc">
