--- a/skills.html
+++ b/skills.html
@@ -31,14 +31,15 @@
 		<li> Sediment core description and curation</li>
 		<li> Shipboard stratigraphy (utilising downcore L*, density, RGB data)</li>
 		<li> Prepping and deploying Gravity Cores, Piston Cores, Multi-Cores, CTDs</li>
+		<li> <i> Shipboard scientist on the CROCCA-2s expedition (Oct-Dec 2018) and the ACCLIMATE-2 expedition (Feb-Mar 2020)</i></li>
 	</ul>
 	<li><img src="doc/skills4.JPG" height="160"> <img src="doc/skills5.jpg" height="160"> <img src="doc/skills6.jpg" height="160">
 	<li><u>Office:</u></li>
 	<ul style="list-style-type:disc; line-height:1.5">
 		<li> Chronostratigraphy: Constructing age-depth models for sediment cores by a variety of approaches, classical and novel</li>
 		<li> <span class="latex">MATLAB</span>: >7 Years experience using Matlab for data analysis, statistics, visualisation</li>
-		<li> Time Series Analysis: Analysing regularly- and irregularly-spaced data in the frequency domain (Blackman-Tukey, Lomb-Scargle, SSA, Wavelet Analysis, Multi-Taper Method, etc.)</li>
-		<li> Novel numerical approaches: Developing algorithms to explore paleoclimate datasets (e.g. Starr et al. in prep)</li>
+		<li> Time Series Analysis: Analysing regularly- and irregularly-spaced data in the frequency domain (Blackman-Tukey, Lomb-Scargle, SSA, Wavelet Analysis, Multi-Taper Method, ARIMA modelling, etc.)</li>
+		<li> Novel numerical approaches to explore paleoclimate datasets </li>
 		<li> Complex Data Visualisation</li>
 		<li> <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span>: Typsetting documents in the tex language</li>
 	</ul>
