--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <i class="fa fa-map-marker" aria-hidden="true"></i> <a href = "https://goo.gl/maps/14XfdZSMrPjdkLZr7" target="_blank">Main Building, Park Place, Cardiff, UK, CF14 3BU </a><br>
   <i class="fa fa-envelope" aria-hidden="true"></i> <a href = "mailto:StarrA1@Cardiff.ac.uk"> starra1@cardiff.ac.uk </a><br>
   <i class="fa fa-file-pdf-o" aria-hidden="true"></i> <a href="doc/cv_2page.pdf" target="_blank">CV</a> <br>
+	<i class="fa fa-google" aria-hidden="true"></i> <a href="https://scholar.google.com/citations?user=h0szf_4AAAAJ&hl=en&oi=ao" target="_blank">Scholar</a> <br>
 
   </p>
   <p class='body'>
