--- a/skills.html
+++ b/skills.html
@@ -19,10 +19,11 @@
 		<font color = #555>
 	<li><u>Laboratory:</u></li>
 	<ul style="list-style-type:disc; line-height:1.5">
-		<li> Sediment grain size analysis (Coulter Counter, Malvern MultiSizer X)</li>
-		<li> Identification and picking of Neogene Foraminifera (planktic and benthic)</li>
-		<li> Stable isotope analysis of calcite (Thermo MAT 253 [Kiel IV])</li>
-		<li> Identification and counting of ice-rafted Debris, pyrite, and other sand-sized entities in marine sediment (light microscope and SEM) </li>
+		<li> Sediment grain size analysis (Coulter Counter, Malvern MultiSizer X) [I.R. Hall's lab]</li>
+		<li> Identification and picking of Neogene Foraminifera (planktic and benthic)[P. Wilson's Lab]</li>
+		<li> Stable isotope analysis of calcite (Thermo MAT 253 [Kiel IV]) [I.R. Hall's lab]</li>
+		<li> Some experience measuring He isotopes in marine sediment samples [G. Winckler's lab]</li>
+		<li> Identification and counting of ice-rafted Debris, pyrite, and other sand-sized entities in marine sediment (light microscope and SEM) [I.R. Hall's lab]</li>
 	</ul>
 	<li><img src="doc/skills1.jpeg" height="140"> <img src="doc/skills3.jpeg" height="140"> <img src="doc/skills2.jpeg" height="140">
   <li><u>Ship:</u></li>
@@ -41,6 +42,7 @@
 		<li> Time Series Analysis: Analysing regularly- and irregularly-spaced data in the frequency domain (Blackman-Tukey, Lomb-Scargle, SSA, Wavelet Analysis, Multi-Taper Method, ARIMA modelling, etc.)</li>
 		<li> Novel numerical approaches to explore paleoclimate datasets </li>
 		<li> Complex Data Visualisation</li>
+		<li> Ocean Data View for visualising oceanographic data </li>
 		<li> <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span>: Typsetting documents in the tex language</li>
 	</ul>
 	<li><img src="doc/skills7.gif" height="240"> <img src="doc/skills9.gif" height="240">
