--- a/publications.html
+++ b/publications.html
@@ -19,7 +19,7 @@
 		<font color = #555>
 	<li><u>Papers:</u></li>
 	<ul style="list-style-type:disc; line-height:1.5">
-		<li><p><b>A Southern Ocean Lead Over Deep Water-Mass Reorganizations during Pleistocene Glacials</b><br> <cite><u>A. Starr</u>, I.R. Hall, S. Barker, S.R. Hemming, H.J.L. van der Lubbe, M.A. Berke, G.R. Bigg, A. Cartagena, F.J. Jiménez-Espejo, J. Gruetzner, G. Knorr, N. Lathika, L.J. LeVay, R. Robinson, M. Ziegler, X. Zhang</cite>, (in review)</p>
+		<li><p><b>A Southern Ocean Lead Over Deep Water-Mass Reorganizations during Pleistocene Glacials</b><br> <cite><u>A. Starr</u>, I.R. Hall, S. Barker, S.R. Hemming, H.J.L. van der Lubbe, M.A. Berke, G.R. Bigg, A. Cartagena, F.J. Jiménez-Espejo, X. Gong, J. Gruetzner, G. Knorr, N. Lathika, L.J. LeVay, R. Robinson, M. Ziegler, X. Zhang</cite>, (in review)</p>
 		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="file.m" target="_blank">code</a> <a href="cite.bib" target="_blank">.bib</a> <a href="temp" target="_blank">link</a></small></pre></li>
 
 		<li><p><b>Invigoration of Indian Ocean Zonal Circulation amplified the Pleistocene Aridification of Eastern Africa</b><br> <cite>H.J.L. van der Lubbe, I.R. Hall, S. Barker, S. R. Hemming, T.F. Baars, <u>A. Starr</u>, J. Just, and J.C.A. Joordens</cite>, (in revision)</p>
@@ -28,25 +28,26 @@
 			</ul>
   <li><u>Selected Conference Presentations:</u></li>
 	<ul style="list-style-type:disc">
-		<li><p><b>Pleistocene Ice-Rafted Debris Variability on the Subantarctic Agulhas Plateau</b><br> <cite><u>Starr, A.</u>, et al.</cite>, Quaternary Research Association PG-Symposium (2018),
-		<b><small>TALK</small></b></p>
-		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="file.m" target="_blank">code</a></small></pre></li>
 
-		<li><p><b>Deep-water variability on the Southern Agulhas Plateau over the past 1.5Ma</b><br> <cite>Hall, I.R.,<u> Starr, A.,</u> et al.</cite>, AGU Fall Meeting (2018),
-		<b><small>POSTER</small></b></p>
-		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="http://adsabs.harvard.edu/abs/2018AGUFMPP11C1262H" target="_blank">link</a></small></pre></li>
-
-		<li><p><b>1.5 Million Years of Ice-Rafted Debris on the Agulhas Plateau</b><br> <cite><u>Starr, A.,</u> Hall, I.R., et al.</cite>, AGU Fall Meeting (2018),
-		<b><small>POSTER</small></b></p>
-		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="http://adsabs.harvard.edu/abs/2018AGUFMPP11C1257H" target="_blank">link</a></small></pre></li>
-
-		<li><p><b>Melting Ice and Sinking Seas: What Ice-Rafted Debris can tell us about Glacial Ocean Circulation</b><br> <cite><u>Starr, A.,</u> et al.</cite>, NERC Wessex Congress (2019),
-		<b><small>TALK</small></b></p>
-		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://github.com/AidanStarr/Wessex-Congress-Figures" target="_blank">code</a></small></pre></li>
+			<li><p><b>The Evolution of Subantarctic Fronts, Deep Ocean Ventilation and Flow Vigour at the Agulhas Plateau: Surface-Deep Coupling Across Climate Transitions of the past 3 Ma</b><br> <cite><u>Starr, A.,</u> et al.</cite>, EGU General Assembly (2020),
+			<b><small>TALK</small></b></p>
+				<pre style="margin-left:3em;margin-top:-1em;"><small><a href="10.5194/egusphere-egu2020-10495" target="_blank">link</a></small></pre></li>
 
 		<li><p><b>Icebergs at the Agulhas Plateau through the Pleistocene: Accumulation, Provenance, and Interpretation of Ice-Rafted Debris</b><br> <cite><u>Starr, A.,</u> et al.</cite>, AGU Fall Meeting (2019),
 		<b><small>POSTER</small></b></p>
 			<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://epic.awi.de/id/eprint/50737/" target="_blank">link</a></small></pre></li>
+
+			<li><p><b>Melting Ice and Sinking Seas: What Ice-Rafted Debris can tell us about Glacial Ocean Circulation</b><br> <cite><u>Starr, A.,</u> et al.</cite>, NERC Wessex Congress (2019),
+			<b><small>TALK</small></b></p>
+			<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://github.com/AidanStarr/Wessex-Congress-Figures" target="_blank">code</a></small></pre></li>
+
+			<li><p><b>Pleistocene Ice-Rafted Debris Variability on the Subantarctic Agulhas Plateau</b><br> <cite><u>Starr, A.</u>, et al.</cite>, Quaternary Research Association PG-Symposium (2018),
+			<b><small>TALK</small></b></p>
+			<pre style="margin-left:3em;margin-top:-1em;"><small><a href="file.m" target="_blank">code</a></small></pre></li>
+
+			<li><p><b>1.5 Million Years of Ice-Rafted Debris on the Agulhas Plateau</b><br> <cite><u>Starr, A.,</u> Hall, I.R., et al.</cite>, AGU Fall Meeting (2018),
+			<b><small>POSTER</small></b></p>
+			<pre style="margin-left:3em;margin-top:-1em;"><small><a href="http://adsabs.harvard.edu/abs/2018AGUFMPP11C1257H" target="_blank">link</a></small></pre></li>
 
 		</ul>
 	<li><u>Other:</u></li>
