--- a/code.html
+++ b/code.html
@@ -56,6 +56,7 @@ document.write(document.lastModified);
 	<br>
   Notes:
   <ul class="b" padding-left="3em">
+		<li><a href="py_cheat_sheet.html">Python Snippets (unfinished)</a></li>
     <li><a href="Time Series Analysis">Time Series Analysis</a></li>
   </ul>
 </div>
