--- a/skills.html
+++ b/skills.html
@@ -39,6 +39,7 @@
 	<ul style="list-style-type:disc; line-height:1.5">
 		<li> Chronostratigraphy: Constructing age-depth models for sediment cores by a variety of approaches, classical and novel</li>
 		<li> <span class="latex">MATLAB</span>: >7 Years experience using Matlab for data analysis, statistics, visualisation</li>
+		<li> Python: in the process of learning data analysis and visualisation with python (Jupyter, NumPy, Pandas, Xarray, Seaborn, Matplotlib, etc...)</li>
 		<li> Time Series Analysis: Analysing regularly- and irregularly-spaced data in the frequency domain (Blackman-Tukey, Lomb-Scargle, SSA, Wavelet Analysis, Multi-Taper Method, ARIMA modelling, etc.)</li>
 		<li> Novel numerical approaches to explore paleoclimate datasets </li>
 		<li> Complex Data Visualisation</li>
@@ -76,6 +77,7 @@ document.write(document.lastModified);
 	<br>
   Notes:
   <ul class="b" padding-left="3em">
+		<li><a href="py_cheat_sheet.html">Python Snippets (unfinished)</a></li>
     <li><a href="Time Series Analysis">Time Series Analysis</a></li>
   </ul>
 </div>
