added github link to index

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <i class="fa fa-envelope" aria-hidden="true"></i> <a href = "mailto:StarrA1@Cardiff.ac.uk"> starra1@cardiff.ac.uk </a><br>
   <i class="fa fa-file-pdf-o" aria-hidden="true"></i> <a href="doc/cv_2page.pdf" target="_blank">CV</a> <br>
 	<i class="fa fa-google" aria-hidden="true"></i> <a href="https://scholar.google.com/citations?user=h0szf_4AAAAJ&hl=en&oi=ao" target="_blank">Scholar</a> <br>
-
+	<i class="fa fa-github" aria-hidden="true"></i> <a href="https://github.com/AidanStarr" target="_blank">GitHub</a> <br>
   </p>
   <p class='body'>
     <font size = 2.5>
