updated skills page

--- a/skills.html
+++ b/skills.html
@@ -39,14 +39,14 @@
 	<ul style="list-style-type:disc; line-height:1.5">
 		<li> Chronostratigraphy: Constructing age-depth models for sediment cores by a variety of approaches, classical and novel</li>
 		<li> <span class="latex">MATLAB</span>: >7 Years experience using Matlab for data analysis, statistics, visualisation</li>
-		<li> Python: in the process of learning data analysis and visualisation with python (Jupyter, NumPy, Pandas, Xarray, Seaborn, Matplotlib, etc...)</li>
+		<li> Python: Data analysis and visualisation with python (Jupyter, NumPy, Pandas, Xarray, Seaborn, Matplotlib, etc...)</li>
 		<li> Time Series Analysis: Analysing regularly- and irregularly-spaced data in the frequency domain (Blackman-Tukey, Lomb-Scargle, SSA, Wavelet Analysis, Multi-Taper Method, ARIMA modelling, etc.)</li>
 		<li> Novel numerical approaches to explore paleoclimate datasets </li>
 		<li> Complex Data Visualisation</li>
 		<li> Ocean Data View for visualising oceanographic data </li>
 		<li> <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span>: Typsetting documents in the tex language</li>
 	</ul>
-	<li><img src="doc/skills7.gif" height="240"> <img src="doc/skills9.gif" height="240">
+	<li> <img src="doc/powerby.png" height="240"> <img src="doc/skills7.gif" height="240"> <img src="doc/skills9.gif" height="240">
 	</ul>
 
 	</ul>
