updated publications info

--- a/skills.html
+++ b/skills.html
@@ -63,6 +63,7 @@ document.write(document.lastModified);
 
 </main>
 
+
 <nav id="nav">
 <div class="innertube">
   <font size = 2.5>
@@ -71,14 +72,9 @@ document.write(document.lastModified);
     <li><a href="index.html">Home</a></li>
     <li><a href="skills.html">Skills</a></li>
     <li><a href="publications.html">Publications</a></li>
-    <li><a href="code.html">Code</a></li>
+    <li><a href="https://github.com/AidanStarr">Code</a></li>
 		<li><a href="fun.html">Fun</a></li>
-  </ul>
-	<br>
-  Notes:
-  <ul class="b" padding-left="3em">
-		<li><a href="py_cheat_sheet.html">Python Snippets (unfinished)</a></li>
-    <li><a href="Time Series Analysis">Time Series Analysis</a></li>
+		<li><a href="misc.html">misc.</a></li>
   </ul>
 </div>
 </nav>
