--- a/misc.html
+++ b/misc.html
@@ -1,11 +1,11 @@
-
 <!DOCTYPE HTML>
 <html>
 <head>
 <body bgcolor="#FFFFFF" text="#000000" link="#900000" vlink="#680000" alink="#F00000">
 <meta http-equiv="Content-Type" content="text/html; charset=mule-utf-8-unix">
-<meta name="description" content="Aidan Starr's Fun">
+<meta name="description" content="Aidan Starr's homepage">
 <meta name="Author" content="Aidan Starr">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="style.css">
 <title>Aidan Starr</title>
 	</head>
@@ -13,19 +13,13 @@
 <main style=top:0%;>
 <div class="innertube">
   <p class='body'>
-  <font size = 5em;><b>When I'm not working...</b><br>
+  <font size = 5em;><b>misc. links, loose scripts, etc.</b><br>
   <font size = 3em;>
 	<ul style="list-style-type:none; line-height:2">
 		<font color = #555>
-			  <li><img src="doc/fun7.jpeg" width="350">
-			  <li><img src="doc/fun1.jpg" width="350">
-				<li><img src="doc/fun2.jpg" width="350">
-				<li><img src="doc/fun3.jpg" width="350">
-				<li><img src="doc/fun4.jpeg" width="350">
-				<li><img src="doc/fun5.jpeg" width="350">
-				<li><img src="doc/fun6.png" width="350">
+			<li><a href="py_cheat_sheet.html">Python Snippets (unfinished)</a></li>
+			<li><a href="Time Series Analysis">Time Series Analysis</a></li>
 	</ul>
-
 </p>
 
 <p class='header'>
