--- a/publications.html
+++ b/publications.html
@@ -19,11 +19,14 @@
 		<font color = #555>
 	<li><u>Papers:</u></li>
 	<ul style="list-style-type:disc; line-height:1.5">
-		<li><p><b>A Southern Ocean Lead Over Deep Water-Mass Reorganizations during Pleistocene Glacials</b><br> <cite><u>A. Starr</u>, I.R. Hall, S. Barker, S.R. Hemming, H.J.L. van der Lubbe, M.A. Berke, G.R. Bigg, A. Cartagena, F.J. Jiménez-Espejo, X. Gong, J. Gruetzner, G. Knorr, N. Lathika, L.J. LeVay, R. Robinson, M. Ziegler, X. Zhang</cite>, (in review)</p>
-		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="file.m" target="_blank">code</a> <a href="cite.bib" target="_blank">.bib</a> <a href="temp" target="_blank">link</a></small></pre></li>
+		<li><p><b>Shifting Antarctic Iceberg Melt Drives Glacial Deep Water-Mass Reorganizations</b><br> <cite><u>A. Starr*</u>, I.R. Hall, S. Barker, T. Rackow, S.R. Hemming, H.J.L van der Lubbe, G. Knorr, X. Gong, X. Zhang, M.A. Berke, G. R. Bigg, A. Cartagena, F.J. Jiménez-Espejo, J. Gruetzner, N. Lathika`, L.J. LeVay, R. Robinson, M. Ziegler, Exp. 361 Science Party</cite>, (in review)</p>
+		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://github.com/AidanStarr/Starr_et_al_2020" target="_blank">code</a> <a href="cite.bib" target="_blank">.bib</a> <a href="temp" target="_blank">link</a></small></pre></li>
 
-		<li><p><b>Invigoration of Indian Ocean Zonal Circulation amplified the Pleistocene Aridification of Eastern Africa</b><br> <cite>H.J.L. van der Lubbe, I.R. Hall, S. Barker, S. R. Hemming, T.F. Baars, <u>A. Starr</u>, J. Just, and J.C.A. Joordens</cite>, (in revision)</p>
+		<li><p><b>Invigoration of Indian Ocean Zonal Circulation amplified the Pleistocene Aridification of Eastern Africa</b><br> <cite>H.J.L. van der Lubbe*, I.R. Hall, S. Barker, S. R. Hemming, T.F. Baars, <u>A. Starr</u>, J. Just, and J.C.A. Joordens</cite>, (in revision, Nature)</p>
 		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="temp" target="_blank">link</a></small></pre></li>
+
+		<li><p><b>Subtropical front migration controls Late Pleistocene surface ocean biogeochemistry and hydrodynamics in the Southern Ocean sector of the Indian Ocean</b><br> <cite>D.N. Tangunan*, M.A. Berke, A. Cartagena-Sierra, J. Gruetzner, F.J. Jiménez-Espejo,L.J. Levay, O. Romero, M. Saavedra-Pellitero, <u>A. Starr</u>, S.R. Hemming, I.R. Hall, J.A. Flores</cite>, (in revision, Scientific Reports)</p>
+		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://doi.pangaea.de/10.1594/PANGAEA.912467" target="_blank">data</a> <a href="temp" target="_blank">link</a></small></pre></li>
 
 			</ul>
   <li><u>Selected Conference Presentations:</u></li>
@@ -77,14 +80,9 @@ document.write(document.lastModified);
     <li><a href="index.html">Home</a></li>
     <li><a href="skills.html">Skills</a></li>
     <li><a href="publications.html">Publications</a></li>
-    <li><a href="code.html">Code</a></li>
+    <li><a href="https://github.com/AidanStarr">Code</a></li>
 		<li><a href="fun.html">Fun</a></li>
-  </ul>
-	<br>
-  Notes:
-  <ul class="b" padding-left="3em">
-		<li><a href="py_cheat_sheet.html">Python Snippets (unfinished)</a></li>
-    <li><a href="Time Series Analysis">Time Series Analysis</a></li>
+		<li><a href="misc.html">misc.</a></li>
   </ul>
 </div>
 </nav>
