--- a/publications.html
+++ b/publications.html
@@ -28,6 +28,10 @@
 		<li><p><b>Subtropical front migration controls Late Pleistocene surface ocean biogeochemistry and hydrodynamics in the Southern Ocean sector of the Indian Ocean</b><br> <cite>D.N. Tangunan*, M.A. Berke, A. Cartagena-Sierra, J. Gruetzner, F.J. Jiménez-Espejo,L.J. Levay, O. Romero, M. Saavedra-Pellitero, <u>A. Starr</u>, S.R. Hemming, I.R. Hall, J.A. Flores</cite>, (in revision, Scientific Reports)</p>
 		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://doi.pangaea.de/10.1594/PANGAEA.912467" target="_blank">data</a> <a href="temp" target="_blank">link</a></small></pre></li>
 
+		<li><p><b>Latitudinal migrations of the subtropical front across the mid-Pleistocene Transition at the Agulhas Plateau</b><br> <cite>Alejandra Cartagena-Sierra*, Melissa A. Berke, Rebecca S. Robinson, Basia Marcks, Isla S. Castañeda, Aidan Starr, Ian R. Hall, Sidney R. Hemming, Leah J. LeVay, Expedition 361 Shipboard Scientific Party Exp. 361</cite>, (in submission, Paleoceanography and Paleoclimatology)</p>
+	
+
+
 			</ul>
   <li><u>Selected Conference Presentations:</u></li>
 	<ul style="list-style-type:disc">
