--- a/publications.html
+++ b/publications.html
@@ -19,8 +19,8 @@
 		<font color = #555>
 	<li><u>Papers:</u></li>
 	<ul style="list-style-type:disc; line-height:1.5">
-		<li><p><b>Shifting Antarctic Iceberg Melt Drives Glacial Deep Water-Mass Reorganizations</b><br> <cite><u>A. Starr*</u>, I.R. Hall, S. Barker, T. Rackow, S.R. Hemming, H.J.L van der Lubbe, G. Knorr, X. Gong, X. Zhang, M.A. Berke, G. R. Bigg, A. Cartagena, F.J. Jiménez-Espejo, J. Gruetzner, N. Lathika`, L.J. LeVay, R. Robinson, M. Ziegler, Exp. 361 Science Party</cite>, (in review)</p>
-		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://github.com/AidanStarr/Starr_et_al_2020" target="_blank">code</a> <a href="cite.bib" target="_blank">.bib</a> <a href="temp" target="_blank">link</a></small></pre></li>
+		<li><p><b>Antarctic Icebergs Reorganize Ocean Circulation During Pleistocene Glacials</b><br> <cite><u>A. Starr*</u>, I.R. Hall, S. Barker, T. Rackow, S.R. Hemming, H.J.L van der Lubbe, G. Knorr, X. Gong, X. Zhang, M.A. Berke, G. R. Bigg, A. Cartagena-Sierra, F.J. Jiménez-Espejo, J. Gruetzner, N. Lathika`, L.J. LeVay, R. Robinson, M. Ziegler, Exp. 361 Science Party</cite>, (Accepted, Nature)</p>
+		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://github.com/AidanStarr/Starr_et_al_2020" target="_blank">code</a> <a href="https://doi.pangaea.de/10.1594/PANGAEA.921315" target="_blank">data</a> <a href="temp" target="_blank">link</a></small></pre></li>
 
 		<li><p><b>Invigoration of Indian Ocean Zonal Circulation amplified the Pleistocene Aridification of Eastern Africa</b><br> <cite>H.J.L. van der Lubbe*, I.R. Hall, S. Barker, S. R. Hemming, T.F. Baars, <u>A. Starr</u>, J. Just, and J.C.A. Joordens</cite>, (in revision, Nature)</p>
 		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="temp" target="_blank">link</a></small></pre></li>
