added new page for research

--- a/APcomp.html
+++ b/APcomp.html
@@ -4,38 +4,39 @@
 <head>
 <body bgcolor="#FFFFFF" text="#000000" link="#900000" vlink="#680000" alink="#F00000">
 <meta http-equiv="Content-Type" content="text/html; charset=mule-utf-8-unix">
-<meta name="description" content="Aidan Starr's Fun">
+<meta name="description" content="Aidan Starr's homepage">
 <meta name="Author" content="Aidan Starr">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="style.css">
 <title>Aidan Starr</title>
 	</head>
 	<body>
-<main style=top:0%;>
-<div class="innertube">
-  <p class='body'>
-  <font size = 5em;><b>When I'm not working...</b><br>
-  <font size = 3em;>
-	<ul style="list-style-type:none; line-height:2">
-		<font color = #555>
-			  <li><img src="doc/fun7.jpeg" width="350">
-			  <li><img src="doc/fun1.jpg" width="350">
-				<li><img src="doc/fun2.jpg" width="350">
-				<li><img src="doc/fun3.jpg" width="350">
-				<li><img src="doc/fun4.jpeg" width="350">
-				<li><img src="doc/fun5.jpeg" width="350">
-				<li><img src="doc/fun6.png" width="350">
-	</ul>
+<main>
+	<div class="innertube">
+		<img src="doc/apcomp_head_1.png" height="300">
+		<p class='header'>
+			<font size=6>
+	  <b>The Agulhas Plateau</b><br>
+	  <font size=2.5>
+	  A bathymetric high rising from the Indian-Atlantic Oceanic Gateway, the Agulhas Plateau is home to a unique set of marine sediment cores.</br>
+	  </p>
 
-</p>
+	<p class='body'>
+		<font size = 2.5>
+			<br>
+	<b>IODP Site U1475 and the Agulhas Plateau Composite</b><br>
+	Site U1475 was recovered in 2016 during <a href="https://iodp.tamu.edu/scienceops/expeditions/southern_african_climates.html">International Ocean Discovery Program Expedition 361</a>
 
-<p class='header'>
-<font size = 1>
-  Last modified:
-<script>
-document.write(document.lastModified);
-</script>
-</p>
+	<p class='body'>
+		<i><b>References</i></b>
+		<ul>
+			<li><cite>Starr et al., [Accepted, Nature]</li>
+	  </ul>
+		</p>
 
+
+	<p>
+	</div>
 </main>
 
 <nav id="nav">
