--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 	<b>About me:</b><br>
 	I'm a Paleoceanography PhD Student working in Prof. Ian Hall's lab at Cardiff University. I trained as an oceanographer (MSci from Southampton University) before turning my interest towards ocean-climate interactions during the Plio-Pleistocene.
 	<p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/XVtxxum8fqY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 <p class='header'>
 <font size = 1>
   Last modified:
@@ -41,7 +44,6 @@
 document.write(document.lastModified);
 </script>
 </p>
-
 </main>
 
 <nav id="nav">
@@ -54,7 +56,18 @@ document.write(document.lastModified);
     <li><a href="publications.html">Publications</a></li>
     <li><a href="https://github.com/AidanStarr">Code</a></li>
 		<li><a href="fun.html">Fun</a></li>
-		<li><a href="misc.html">misc.</a></li>
+		<br>
+		<li><b>Research:</b>
+			<ul>
+				<i>
+				<li><a href="APcomp.html">The Agulhas Plateau</a></li>
+				<br class="small">
+				<li>The LGM Indian Ocean</li>
+				<br class="small">
+				<li>Southern Ocean Icebergs</li>
+			</i>
+			</ul>
+		</li>
   </ul>
 </div>
 </nav>
