--- a/skills.html
+++ b/skills.html
@@ -74,7 +74,18 @@ document.write(document.lastModified);
     <li><a href="publications.html">Publications</a></li>
     <li><a href="https://github.com/AidanStarr">Code</a></li>
 		<li><a href="fun.html">Fun</a></li>
-		<li><a href="misc.html">misc.</a></li>
+		<br>
+		<li><b>Research:</b>
+			<ul>
+				<i>
+				<li><a href="APcomp.html">The Agulhas Plateau</a></li>
+				<br class="small">
+				<li>The LGM Indian Ocean</li>
+				<br class="small">
+				<li>Southern Ocean Icebergs</li>
+			</i>
+			</ul>
+		</li>
   </ul>
 </div>
 </nav>
