--- a/publications.html
+++ b/publications.html
@@ -25,11 +25,12 @@
 		<li><p><b>Invigoration of Indian Ocean Zonal Circulation amplified the Pleistocene Aridification of Eastern Africa</b><br> <cite>H.J.L. van der Lubbe*, I.R. Hall, S. Barker, S. R. Hemming, T.F. Baars, <u>A. Starr</u>, J. Just, and J.C.A. Joordens</cite>, (in revision, Nature)</p>
 		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="temp" target="_blank">link</a></small></pre></li>
 
-		<li><p><b>Subtropical front migration controls Late Pleistocene surface ocean biogeochemistry and hydrodynamics in the Southern Ocean sector of the Indian Ocean</b><br> <cite>D.N. Tangunan*, M.A. Berke, A. Cartagena-Sierra, J. Gruetzner, F.J. Jiménez-Espejo,L.J. Levay, O. Romero, M. Saavedra-Pellitero, <u>A. Starr</u>, S.R. Hemming, I.R. Hall, J.A. Flores</cite>, (in revision, Scientific Reports)</p>
+		<li><p><b>Biotic response to late Pleistocene glacial-interglacial variability in the Southern Ocean sector of the Indian Ocean </b><br> <cite>D.N. Tangunan*, M.A. Berke, A. Cartagena-Sierra, J.A. Flores, J. Gruetzner, F.J. Jiménez-Espejo, L.J. Levay, I.R. Hall, S.R. Hemming, O. Romero, M. Saavedra-Pellitero,<u>A. Starr</u>,  Expedition 361 Science Party</cite>, (in revision, Communications Earth and Environment)</p>
 		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://doi.pangaea.de/10.1594/PANGAEA.912467" target="_blank">data</a> <a href="temp" target="_blank">link</a></small></pre></li>
 
-		<li><p><b>Latitudinal migrations of the subtropical front across the mid-Pleistocene Transition at the Agulhas Plateau</b><br> <cite>Alejandra Cartagena-Sierra*, Melissa A. Berke, Rebecca S. Robinson, Basia Marcks, Isla S. Castañeda, <u>Aidan Starr</u>, Ian R. Hall, Sidney R. Hemming, Leah J. LeVay, Expedition 361 Shipboard Scientific Party Exp. 361</cite>, (in submission, Paleoceanography and Paleoclimatology)</p>
+		<li><p><b>Latitudinal migrations of the subtropical front across the mid-Pleistocene Transition at the Agulhas Plateau</b><br> <cite>A. Cartagena-Sierra*, M.A. Berke, R.S. Robinson, B. Marcks, I.S. Castañeda, <u>A. Starr</u>, I.R. Hall, S.R. Hemming, L.J. LeVay, Expedition 361 Science Party</cite>, (in submission, Paleoceanography and Paleoclimatology)</p>
 
+		<li><p><b>Neodymium Isotope Evidence for Coupled Southern Ocean Circulation and Antarctic Climate Throughout the Last 118,000 Years</b><br> <cite>T.J. Williams*, E.E. Martin, E. Sikes,<u>A. Starr</u>, N.E. Umling, R. Glaubke</cite>, (in review, Quaternary Science Reviews)</p>
 
 
 			</ul>
@@ -86,7 +87,18 @@ document.write(document.lastModified);
     <li><a href="publications.html">Publications</a></li>
     <li><a href="https://github.com/AidanStarr">Code</a></li>
 		<li><a href="fun.html">Fun</a></li>
-		<li><a href="misc.html">misc.</a></li>
+		<br>
+		<li><b>Research:</b>
+			<ul>
+				<i>
+				<li><a href="APcomp.html">The Agulhas Plateau</a></li>
+				<br class="small">
+				<li>The LGM Indian Ocean</li>
+				<br class="small">
+				<li>Southern Ocean Icebergs</li>
+			</i>
+			</ul>
+		</li>
   </ul>
 </div>
 </nav>
