updated pub list

--- a/publications.html
+++ b/publications.html
@@ -19,18 +19,20 @@
 		<font color = #555>
 	<li><u>Papers:</u></li>
 	<ul style="list-style-type:disc; line-height:1.5">
-		<li><p><b>Antarctic Icebergs Reorganize Ocean Circulation During Pleistocene Glacials</b><br> <cite><u>A. Starr*</u>, I.R. Hall, S. Barker, T. Rackow, S.R. Hemming, H.J.L van der Lubbe, G. Knorr, X. Gong, X. Zhang, M.A. Berke, G. R. Bigg, A. Cartagena-Sierra, F.J. Jiménez-Espejo, J. Gruetzner, N. Lathika`, L.J. LeVay, R. Robinson, M. Ziegler, Exp. 361 Science Party</cite>, (Accepted, Nature)</p>
-		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://github.com/AidanStarr/Starr_et_al_2020" target="_blank">code</a> <a href="https://doi.pangaea.de/10.1594/PANGAEA.921315" target="_blank">data</a> <a href="temp" target="_blank">link</a></small></pre></li>
+		<li><p><b>Antarctic Icebergs Reorganize Ocean Circulation During Pleistocene Glacials</b><br> <cite><u>A. Starr*</u>, I.R. Hall, S. Barker, T. Rackow, S.R. Hemming, H.J.L van der Lubbe, G. Knorr, X. Gong, X. Zhang, M.A. Berke, G. R. Bigg, A. Cartagena-Sierra, F.J. Jiménez-Espejo, J. Gruetzner, N. Lathika`, L.J. LeVay, R. Robinson, M. Ziegler, Exp. 361 Science Party</cite>, Nature (2021)</p>
+		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://github.com/AidanStarr/Starr_et_al_2020" target="_blank">code</a> <a href="https://doi.pangaea.de/10.1594/PANGAEA.921315" target="_blank">data</a> <a href="https://www.nature.com/articles/s41586-020-03094-7" target="_blank">link</a></small></pre></li>
+
+		<li><p><b>Strong glacial-interglacial variability in upper ocean hydrodynamics, biogeochemistry, and productivity in the southern Indian Ocean </b><br> <cite>D.N. Tangunan*, M.A. Berke, A. Cartagena-Sierra, J.A. Flores, J. Gruetzner, F.J. Jiménez-Espejo, L.J. Levay, I.R. Hall, S.R. Hemming, O. Romero, M. Saavedra-Pellitero,<u>A. Starr</u>,  Expedition 361 Science Party</cite>, Communications Earth and Environment (2021)</p>
+		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://doi.pangaea.de/10.1594/PANGAEA.912467" target="_blank">data</a> <a href="https://www.nature.com/articles/s43247-021-00148-0?fbclid=IwAR1gKV8B--r6qqdHd7lPykuPY-CPggY3hae5-BU_-javctmTAxgygP4b_D4" target="_blank">link</a></small></pre></li>
+
+		<li><p><b>Neodymium Isotope Evidence for Coupled Southern Ocean Circulation and Antarctic Climate Throughout the Last 118,000 Years</b><br> <cite>T.J. Williams*, E.E. Martin, E. Sikes,<u>A. Starr</u>, N.E. Umling, R. Glaubke</cite>, Quaternary Science Reviews (2021)</p>
+		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="temp" target="_blank">data</a> <a href="https://www.sciencedirect.com/science/article/pii/S0277379121001220" target="_blank">link</a></small></pre></li>
+
+		<li><p><b>Latitudinal migrations of the subtropical front across the mid-Pleistocene Transition at the Agulhas Plateau</b><br> <cite>A. Cartagena-Sierra*, M.A. Berke, R.S. Robinson, B. Marcks, I.S. Castañeda, <u>A. Starr</u>, I.R. Hall, S.R. Hemming, L.J. LeVay, Expedition 361 Science Party</cite>, (in submission, Paleoceanography and Paleoclimatology)</p>
 
 		<li><p><b>Invigoration of Indian Ocean Zonal Circulation amplified the Pleistocene Aridification of Eastern Africa</b><br> <cite>H.J.L. van der Lubbe*, I.R. Hall, S. Barker, S. R. Hemming, T.F. Baars, <u>A. Starr</u>, J. Just, and J.C.A. Joordens</cite>, (in revision, Nature)</p>
 		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="temp" target="_blank">link</a></small></pre></li>
 
-		<li><p><b>Biotic response to late Pleistocene glacial-interglacial variability in the Southern Ocean sector of the Indian Ocean </b><br> <cite>D.N. Tangunan*, M.A. Berke, A. Cartagena-Sierra, J.A. Flores, J. Gruetzner, F.J. Jiménez-Espejo, L.J. Levay, I.R. Hall, S.R. Hemming, O. Romero, M. Saavedra-Pellitero,<u>A. Starr</u>,  Expedition 361 Science Party</cite>, (in revision, Communications Earth and Environment)</p>
-		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://doi.pangaea.de/10.1594/PANGAEA.912467" target="_blank">data</a> <a href="temp" target="_blank">link</a></small></pre></li>
-
-		<li><p><b>Latitudinal migrations of the subtropical front across the mid-Pleistocene Transition at the Agulhas Plateau</b><br> <cite>A. Cartagena-Sierra*, M.A. Berke, R.S. Robinson, B. Marcks, I.S. Castañeda, <u>A. Starr</u>, I.R. Hall, S.R. Hemming, L.J. LeVay, Expedition 361 Science Party</cite>, (in submission, Paleoceanography and Paleoclimatology)</p>
-
-		<li><p><b>Neodymium Isotope Evidence for Coupled Southern Ocean Circulation and Antarctic Climate Throughout the Last 118,000 Years</b><br> <cite>T.J. Williams*, E.E. Martin, E. Sikes,<u>A. Starr</u>, N.E. Umling, R. Glaubke</cite>, (in review, Quaternary Science Reviews)</p>
 
 
 			</ul>
