--- a/APcomp.html
+++ b/APcomp.html
@@ -30,7 +30,7 @@
 	<p class='body'>
 		<i><b>References</i></b>
 		<ul>
-			<li><cite>Starr et al., [Accepted, Nature]</li>
+			<li><cite>Starr et al., [Nature, 2021]</li>
 	  </ul>
 		</p>
 
