--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <i class="fa fa-graduation-cap" aria-hidden="true"></i> School of Earth and Ocean Sciences, <a href="https:/cardiff.ac.uk" target="_blank">Cardiff University </a><br>
   <i class="fa fa-map-marker" aria-hidden="true"></i> <a href = "https://goo.gl/maps/14XfdZSMrPjdkLZr7" target="_blank">Main Building, Park Place, Cardiff, UK, CF14 3BU </a><br>
   <i class="fa fa-envelope" aria-hidden="true"></i> <a href = "mailto:StarrA1@Cardiff.ac.uk"> starra1@cardiff.ac.uk </a><br>
-  <i class="fa fa-file-pdf-o" aria-hidden="true"></i> <a href="doc/cv_2page.pdf" target="_blank">CV</a> <br>
+  <i class="fa fa-file-pdf-o" aria-hidden="true"></i> <a href="doc/cv_4page.pdf" target="_blank">CV</a> <br>
 	<i class="fa fa-google" aria-hidden="true"></i> <a href="https://scholar.google.com/citations?user=h0szf_4AAAAJ&hl=en&oi=ao" target="_blank">Scholar</a> <br>
 	<i class="fa fa-github" aria-hidden="true"></i> <a href="https://github.com/AidanStarr" target="_blank">GitHub</a> <br>
   </p>
@@ -32,7 +32,7 @@
     <font size = 2.5>
       <br>
 	<b>About me:</b><br>
-	I'm a Paleoceanography PhD Student working in Prof. Ian Hall's lab at Cardiff University. I trained as an oceanographer (MSci from Southampton University) before turning my interest towards ocean-climate interactions during the Plio-Pleistocene.
+	I'm a Paleoceanography Research Associate working in Prof. Ian Hall's lab at Cardiff University. I trained as an oceanographer (MSci from Southampton University) before turning my interest towards ocean-climate interactions during the Plio-Pleistocene. I have recently submitted my PhD thesis titled `Surface and Deep Hydrography across the Mid-Pleistocene Transition; Multi-proxy paleoceanographic reconstructions from the Southwest Indian Ocean'.
 	<p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/XVtxxum8fqY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
