--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <br>
   <b>Aidan Starr</b><br>
   <font size=2.5>
-  PhD Research Student in <b>Paleoceanography</b><br>
+  Research Associate in <b>Paleoceanography</b><br>
   <i class="fa fa-graduation-cap" aria-hidden="true"></i> School of Earth and Ocean Sciences, <a href="https:/cardiff.ac.uk" target="_blank">Cardiff University </a><br>
   <i class="fa fa-map-marker" aria-hidden="true"></i> <a href = "https://goo.gl/maps/14XfdZSMrPjdkLZr7" target="_blank">Main Building, Park Place, Cardiff, UK, CF14 3BU </a><br>
   <i class="fa fa-envelope" aria-hidden="true"></i> <a href = "mailto:StarrA1@Cardiff.ac.uk"> starra1@cardiff.ac.uk </a><br>
