--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <font size=6>
     <br>
     <br>
-  <b>Aidan Starr</b><br>
+  <b>Dr. Aidan Starr</b><br>
   <font size=2.5>
   Research Associate in <b>Paleoceanography</b><br>
   <i class="fa fa-graduation-cap" aria-hidden="true"></i> School of Earth and Ocean Sciences, <a href="https:/cardiff.ac.uk" target="_blank">Cardiff University </a><br>
@@ -32,7 +32,7 @@
     <font size = 2.5>
       <br>
 	<b>About me:</b><br>
-	I'm a Paleoceanography Research Associate working in Prof. Ian Hall's lab at Cardiff University. I trained as an oceanographer (MSci from Southampton University) before turning my interest towards ocean-climate interactions during the Plio-Pleistocene. I have recently submitted my PhD thesis titled `Surface and Deep Hydrography across the Mid-Pleistocene Transition; Multi-proxy paleoceanographic reconstructions from the Southwest Indian Ocean'.
+	I'm a Paleoceanography Research Associate working in Prof. Ian Hall's lab at Cardiff University. I trained as an oceanographer (MSci from Southampton University) before turning my interest towards ocean-climate interactions during the Plio-Pleistocene. In early 2022 I was awarded a PhD for my thesis titled `Surface and Deep Hydrography across the Mid-Pleistocene Transition; Multi-proxy paleoceanographic reconstructions from the Southwest Indian Ocean'.
 	<p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/XVtxxum8fqY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
