--- a/fun.html
+++ b/fun.html
@@ -53,6 +53,7 @@ document.write(document.lastModified);
 			<ul>
 				<i>
 				<li><a href="APcomp.html">The Agulhas Plateau</a></li>
+				<li><a href="Timescales.html">Mid-Pleistocene Transition: Chronologies and Ocean Dynamics</a></li>
 				<br class="small">
 				<li>The LGM Indian Ocean</li>
 				<br class="small">
