--- a/publications.html
+++ b/publications.html
@@ -28,10 +28,11 @@
 		<li><p><b>Neodymium Isotope Evidence for Coupled Southern Ocean Circulation and Antarctic Climate Throughout the Last 118,000 Years</b><br> <cite>T.J. Williams*, E.E. Martin, E. Sikes,<u>A. Starr</u>, N.E. Umling, R. Glaubke</cite>, Quaternary Science Reviews (2021)</p>
 		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="temp" target="_blank">data</a> <a href="https://www.sciencedirect.com/science/article/pii/S0277379121001220" target="_blank">link</a></small></pre></li>
 
-		<li><p><b>Latitudinal migrations of the subtropical front across the mid-Pleistocene Transition at the Agulhas Plateau</b><br> <cite>A. Cartagena-Sierra*, M.A. Berke, R.S. Robinson, B. Marcks, I.S. Castañeda, <u>A. Starr</u>, I.R. Hall, S.R. Hemming, L.J. LeVay, Expedition 361 Science Party</cite>, (in submission, Paleoceanography and Paleoclimatology)</p>
+		<li><p><b>Latitudinal migrations of the subtropical front across the mid-Pleistocene Transition at the Agulhas Plateau</b><br> <cite>A. Cartagena-Sierra*, M.A. Berke, R.S. Robinson, B. Marcks, I.S. Castañeda, <u>A. Starr</u>, I.R. Hall, S.R. Hemming, L.J. LeVay, Expedition 361 Science Party</cite>, Paleoceanography and Paleoclimatology (2021)</p>
+		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://www.ncei.noaa.gov/metadata/geoportal/rest/metadata/item/noaa-ocean-33472/html" target="_blank">data</a> <a href="https://doi.org/10.1029/2020PA004084" target="_blank">link</a></small></pre></li>
 
-		<li><p><b>Invigoration of Indian Ocean Zonal Circulation amplified the Pleistocene Aridification of Eastern Africa</b><br> <cite>H.J.L. van der Lubbe*, I.R. Hall, S. Barker, S. R. Hemming, T.F. Baars, <u>A. Starr</u>, J. Just, and J.C.A. Joordens</cite>, (in revision, Nature)</p>
-		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="temp" target="_blank">link</a></small></pre></li>
+		<li><p><b>Invigoration of Indian Ocean Zonal Circulation amplified the Pleistocene Aridification of Eastern Africa</b><br> <cite>H.J.L. van der Lubbe*, I.R. Hall, S. Barker, S. R. Hemming, T.F. Baars, <u>A. Starr</u>, J. Just, and J.C.A. Joordens</cite>, Nature (2021)</p>
+		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://doi.pangaea.de/10.1594/PANGAEA.933833" target="_blank"><data></a> <a href="https://www.nature.com/articles/s41586-021-03896-3" target="_blank">link</a></small></pre></li>
 
 
 
@@ -62,9 +63,14 @@
 		</ul>
 	<li><u>Other:</u></li>
 		<ul style="list-style-type:disc">
+	<li><p><b>Surface and deep hydrography across the mid-pleistocene transition; multi-proxy paleoceanographic reconstructions from the Southwest Indian Ocean</b><br> <cite><u>Starr, A.,</u></cite> ORCA, Cardiff University (2017),
+	<b><small>PhD THESIS</small></b></p>
+	<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://orca.cardiff.ac.uk/146799/" target="_blank">link (authorisation required... email me for a copy!)</a></small></pre></li>
+
 	<li><p><b>Vertical Habitat Changes Preceding Extinction in Planktic Foraminifer <i>Globoconella puncticulata</i></b><br> <cite><u>Starr, A.,</u></cite> National Oceanography Library, Southampton (2017),
-	<b><small>MSci THESIS</small></b></p>
-	<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://www-lib.soton.ac.uk/uhtbin/cgisirsi/x/0/0/57/5/3?searchdata1=1756240%7BCKEY%7D&searchfield1=GENERAL%5ESUBJECT%5EGENERAL%5E%5E&user_id=WEBSERVER" target="_blank">link</a></small></pre></li></ul>
+		<b><small>MSci THESIS</small></b></p>
+		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://www-lib.soton.ac.uk/uhtbin/cgisirsi/x/0/0/57/5/3?searchdata1=1756240%7BCKEY%7D&searchfield1=GENERAL%5ESUBJECT%5EGENERAL%5E%5E&user_id=WEBSERVER" target="_blank">link</a></small></pre></li>
+	</ul>
 	</ul>
 
 </p>
@@ -94,6 +100,7 @@ document.write(document.lastModified);
 			<ul>
 				<i>
 				<li><a href="APcomp.html">The Agulhas Plateau</a></li>
+				<li><a href="Timescales.html">Mid-Pleistocene Transition: Chronologies and Ocean Dynamics</a></li>
 				<br class="small">
 				<li>The LGM Indian Ocean</li>
 				<br class="small">
