--- a/APcomp.html
+++ b/APcomp.html
@@ -18,14 +18,14 @@
 			<font size=6>
 	  <b>The Agulhas Plateau</b><br>
 	  <font size=2.5>
-	  A bathymetric high rising from the Indian-Atlantic Oceanic Gateway, the Agulhas Plateau is home to a unique set of marine sediment cores.</br>
+	  A bathymetric high rising from the Indian-Atlantic Oceanic Gateway, the Agulhas Plateau is home to a unique set of marine sediment cores. These core sites range from piston and gravity cores comprised predominantly of Late Pleistocene sediment to International Ocean Discovery Program cores (Site U1475 from Expedition 361, for example). Site U1475 recovered an expectional complete sequence of carbonate-rich mud extending from the Holocene to the late Miocene!</br>
 	  </p>
 
 	<p class='body'>
 		<font size = 2.5>
 			<br>
 	<b>IODP Site U1475 and the Agulhas Plateau Composite</b><br>
-	Site U1475 was recovered in 2016 during <a href="https://iodp.tamu.edu/scienceops/expeditions/southern_african_climates.html">International Ocean Discovery Program Expedition 361</a>
+	Site U1475 was recovered in 2016 during <a href="https://iodp.tamu.edu/scienceops/expeditions/southern_african_climates.html">International Ocean Discovery Program Expedition 361</a>. During my PhD, I constructed a continuous Agulhas Plateau composite for the last 2+ Million Years by aligning the stratigraphies of Site U1475 cores and a "pre-site survey" core MD02-2588. It is this composite record (the APcomp) that I've worked on most, generating high resolution multi-proxy datasets and developing a number of age-depth models. From reconstructing migrations in the Subtropical Front, to revealing the presence of far-travelled Antarctic icebergs over multiple glacial cycles, this locations has proved a valuable archive for Southern Hemisphere paleoceanography over the Pliocene and Pleistocene. If you are interested in collaborating on Agulhas Plateau paleoceanography, feel free to drop me an email!
 
 	<p class='body'>
 		<i><b>References</i></b>
@@ -54,6 +54,7 @@
 			<ul>
 				<i>
 				<li><a href="APcomp.html">The Agulhas Plateau</a></li>
+				<li><a href="Timescales.html">Mid-Pleistocene Transition: Chronologies and Ocean Dynamics</a></li>
 				<br class="small">
 				<li>The LGM Indian Ocean</li>
 				<br class="small">
